feat: New update - firebase deployment - contact email - responsive menu - update works

--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Emonbars</title>
     <meta charset="utf-8" />
-    <link rel="icon" href="./emonbars-icon.png" />
+    <link rel="icon" href="./emonbars-icon.png" alt="Emonbars" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Emonbars</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;1,300&display=swap"
       rel="stylesheet"
+    />
+    <meta
+      name="description"
+      content="Hi, I'm Eduardo Montoya, a Back end Developer from Querétaro, Mexico. I have some projects like Feek and Nao where I'm work 24/7 in their growth."
     />
   </head>
   <body>
